[DDW-738] Fix name/icon overlapping

--- a/source/renderer/app/components/layout/TopBar.scss
+++ b/source/renderer/app/components/layout/TopBar.scss
@@ -86,7 +86,7 @@
     justify-content: center;
     left: 70px;
     position: absolute;
-    width: calc(100% - 210px);
+    width: calc(100% - 230px);
   }
 
   .rectangle {
